--- a/UIWebView/Base.lproj/Main.storyboard
+++ b/UIWebView/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pa1-2P-ZBj">
-                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="21" width="375" height="602"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="djF-zp-DIn">
@@ -30,21 +30,10 @@
                                 <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </activityIndicatorView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="goF-cR-mEA" userLabel="Header">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OES-Re-9dG">
-                                        <rect key="frame" x="163.5" y="7" width="48" height="30"/>
-                                        <state key="normal" title="Run JS"/>
-                                        <connections>
-                                            <action selector="runJSButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="33O-QU-a9z"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
+                                <rect key="frame" x="0.0" y="20" width="375" height="1"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="OES-Re-9dG" firstAttribute="centerX" secondItem="goF-cR-mEA" secondAttribute="centerX" id="LWZ-H5-gvJ"/>
-                                    <constraint firstItem="OES-Re-9dG" firstAttribute="centerY" secondItem="goF-cR-mEA" secondAttribute="centerY" id="a1M-5p-yTw"/>
-                                    <constraint firstAttribute="height" constant="44" id="cRf-hA-4SD"/>
+                                    <constraint firstAttribute="height" constant="1" id="cRf-hA-4SD"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jED-rG-CwA" userLabel="Footer">
@@ -65,8 +54,8 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m2D-fm-lM2">
-                                        <rect key="frame" x="164" y="7" width="47" height="30"/>
-                                        <state key="normal" title="Reload"/>
+                                        <rect key="frame" x="155" y="7" width="65" height="30"/>
+                                        <state key="normal" title="Segarkan"/>
                                         <connections>
                                             <action selector="reloadButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Mx-LI-9Db"/>
                                         </connections>
